--- a/week 1 hands on data science/data_analysis_init.ipynb
+++ b/week 1 hands on data science/data_analysis_init.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "403e523d-3feb-4fe6-a3ef-ffccec764292",
    "metadata": {},
    "outputs": [],
@@ -619,8 +619,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "d8d3c740-83b8-44d3-9ce2-50aec0ff7816",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # pd.get_dummies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "3c22229a-764e-4121-b6cc-b9100b6136eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Color_Blue  Color_Green  Color_Red\n",
+      "0       False        False       True\n",
+      "1        True        False      False\n",
+      "2       False         True      False\n",
+      "3        True        False      False\n",
+      "4       False        False       True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample DataFrame\n",
+    "df = pd.DataFrame({\n",
+    "    'Color': ['Red', 'Blue', 'Green', 'Blue', 'Red']\n",
+    "})\n",
+    "\n",
+    "# One-hot encoding the 'Color' column\n",
+    "df_encoded = pd.get_dummies(df, columns=['Color'])\n",
+    "\n",
+    "print(df_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "71c05330-428f-4e9a-986a-d824ddd04af2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Color_Green  Color_Red\n",
+      "0        False       True\n",
+      "1        False      False\n",
+      "2         True      False\n",
+      "3        False      False\n",
+      "4        False       True\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_encoded = pd.get_dummies(df, columns=['Color'], prefix='Color', drop_first=True)\n",
+    "print(df_encoded)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5be7f406-c99e-420c-944b-fc6bae2a399e",
    "metadata": {},
    "outputs": [],
    "source": []
